--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -6,8 +6,12 @@
   <package id="Autofac" version="4.8.1" targetFramework="net471" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net471" />
   <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net471" />
+  <package id="CodeHollow.FeedReader" version="1.1.5" targetFramework="net471" />
+  <package id="Elasticsearch.Net" version="6.4.1" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="Geonorge.FeedReader" version="1.0.0" targetFramework="net471" />
   <package id="GeoNorgeAPI" version="3.0.72" targetFramework="net471" />
+  <package id="HtmlAgilityPack" version="1.5.1" targetFramework="net471" />
   <package id="Kartverket.Geonorge.Utilities" version="1.0.43" targetFramework="net452" />
   <package id="Kentor.AuthServices" version="0.23.0" targetFramework="net471" />
   <package id="Kentor.AuthServices.HttpModule" version="0.23.0" targetFramework="net471" />
@@ -32,6 +36,7 @@
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="NEST" version="6.4.1" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
   <package id="OctoPack" version="3.6.3" targetFramework="net471" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net45" />
