--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -273,6 +273,10 @@
     <Compile Include="Migrations\201810260928254_AddRequestIdToDownloadUsageEntry.Designer.cs">
       <DependentUpon>201810260928254_AddRequestIdToDownloadUsageEntry.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901171421273_AddIndexes.cs" />
+    <Compile Include="Migrations\201901171421273_AddIndexes.Designer.cs">
+      <DependentUpon>201901171421273_AddIndexes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DownloadUsage.cs" />
     <Compile Include="Models\UpdateMetadataInformation.cs" />
     <Compile Include="Services\FileService.cs" />
@@ -727,6 +731,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810260928254_AddRequestIdToDownloadUsageEntry.resx">
       <DependentUpon>201810260928254_AddRequestIdToDownloadUsageEntry.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901171421273_AddIndexes.resx">
+      <DependentUpon>201901171421273_AddIndexes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\UI.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
