Enable use of netstandard2.0

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -54,7 +54,11 @@
       <error statusCode="401" redirect="~/Error/Unauthorized/" />
     </customErrors>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2" >
+      <assemblies>
+        <add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.7.2" enableVersionHeader="false" />
     <httpModules />
   </system.web>
