--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -14,6 +14,7 @@
   <package id="GeoNorgeAPI" version="3.1.0" targetFramework="net472" />
   <package id="Kartverket.Geonorge.Utilities" version="1.0.45" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="MB.Owin.Logging.Log4Net" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
@@ -48,6 +49,8 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Jwt" version="4.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
