Fetch username from token validation response

--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -14,4 +14,6 @@
   <add key="GeoID:MetadataAddress" value="" />
   <add key="GeoID:BaatAuthzApiUrl" value=""/>
   <add key="GeoID:BaatAuthzApiCredentials" value=""/> <!-- brukernavn og passord separert med kolon -->
+  <add key="GeoID:IntrospectionUrl" value=""/>
+  <add key="GeoID:IntrospectionCredentials" value=""/>
 </appSettings>
