Set Access-Control-Allow-Origin

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -67,6 +67,7 @@
       <customHeaders>
         <clear />
         <remove name="X-Powered-By" />
+        <add name="Access-Control-Allow-Origin" value="*" />
       </customHeaders>
     </httpProtocol>
     <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough" />
