Web config for Access-Control-Allow-Origin

--- a/Kartverket.Geonorge.Download/Web.Test.config
+++ b/Kartverket.Geonorge.Download/Web.Test.config
@@ -6,6 +6,25 @@
     </customErrors>
   </system.web>
 
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders xdt:Transform="Replace">
+        <clear />
+        <remove name="X-Powered-By" />
+        <add name="Access-Control-Allow-Origin" value="https://kartkatalog.test.geonorge.no" />
+      </customHeaders>
+    </httpProtocol>
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough" />
+    <validation validateIntegratedModeConfiguration="false" />
+
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
+
   <log4net debug="true">
     <root>
       <priority value="INFO" xdt:Transform="Replace" />
