--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -67,7 +67,7 @@
       <customHeaders>
         <clear />
         <remove name="X-Powered-By" />
-        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Origin" value="https://kartkatalog.dev.geonorge.no" />
       </customHeaders>
     </httpProtocol>
     <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough" />
