--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -362,6 +362,10 @@
     <Compile Include="Migrations\201901171421273_AddIndexes.Designer.cs">
       <DependentUpon>201901171421273_AddIndexes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201910171450034_AccessConstraintRequiredRole.cs" />
+    <Compile Include="Migrations\201910171450034_AccessConstraintRequiredRole.Designer.cs">
+      <DependentUpon>201910171450034_AccessConstraintRequiredRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DownloadUsage.cs" />
     <Compile Include="Models\UpdateMetadataInformation.cs" />
     <Compile Include="Services\FileService.cs" />
@@ -772,6 +776,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901171421273_AddIndexes.resx">
       <DependentUpon>201901171421273_AddIndexes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201910171450034_AccessConstraintRequiredRole.resx">
+      <DependentUpon>201910171450034_AccessConstraintRequiredRole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\UI.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
