Set expect100Continue false

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -49,6 +49,11 @@
     <add key="EnvironmentName" value="dev" />
     <add key="SupportsMultiCulture" value="true" />
   </appSettings>
+  <system.net>
+    <settings>
+      <servicePointManager expect100Continue="false" />
+    </settings>
+  </system.net>
   <system.web>
     <customErrors mode="Off" defaultRedirect="~/Error/">
       <error statusCode="404" redirect="~/Error/NotFound/" />
