Add required roles for polygon selection

--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -373,6 +373,10 @@
     <Compile Include="Migrations\201912022034314_AddFileAccessConstraintRequiredRole.designer.cs">
       <DependentUpon>201912022034314_AddFileAccessConstraintRequiredRole.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912041359577_SupportsPolygonSelectionRequiredRole.cs" />
+    <Compile Include="Migrations\201912041359577_SupportsPolygonSelectionRequiredRole.designer.cs">
+      <DependentUpon>201912041359577_SupportsPolygonSelectionRequiredRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DownloadUsage.cs" />
     <Compile Include="Models\FileAccessConstraint.cs" />
     <Compile Include="Models\UpdateMetadataInformation.cs" />
@@ -790,6 +794,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201912022034314_AddFileAccessConstraintRequiredRole.resx">
       <DependentUpon>201912022034314_AddFileAccessConstraintRequiredRole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912041359577_SupportsPolygonSelectionRequiredRole.resx">
+      <DependentUpon>201912041359577_SupportsPolygonSelectionRequiredRole.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\UI.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
