Set cookieSameSite None

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -55,6 +55,7 @@
     </settings>
   </system.net>
   <system.web>
+    <sessionState cookieSameSite="None" />
     <customErrors mode="Off" defaultRedirect="~/Error/">
       <error statusCode="404" redirect="~/Error/NotFound/" />
       <error statusCode="401" redirect="~/Error/Unauthorized/" />
