--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -16,4 +16,5 @@
   <add key="GeoID:BaatAuthzApiCredentials" value=""/> <!-- brukernavn og passord separert med kolon -->
   <add key="GeoID:IntrospectionUrl" value=""/>
   <add key="GeoID:IntrospectionCredentials" value=""/>
+  <add key="BasicAuthRoles" value=""/>
 </appSettings>
