Update DownloadUrl localhost

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -38,7 +38,7 @@
     <add key="DistributedBy" value="Geonorge" />
     <add key="BuildVersionNumber" value="3.1" />
     <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
-    <add key="DownloadUrl" value="http://localhost:61236/" />
+    <add key="DownloadUrl" value="https://localhost:44350/" />
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
     <add key="FmeAreaChecker" value="http://testnedlasting.geonorge.no/fmedatastreaming/Util/AreaChecker.fmw?" />
     <add key="FmeAreaCheckerEnabled" value="true" />
