Get areas for eiendom

--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -378,6 +378,7 @@
       <DependentUpon>202003310835553_RolesForMachineAccount.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\DownloadUsage.cs" />
+    <Compile Include="Models\Eiendom.cs" />
     <Compile Include="Models\FileAccessConstraint.cs" />
     <Compile Include="Models\Organization.cs" />
     <Compile Include="Models\UpdateMetadataInformation.cs" />
