Set config for MatrikkelEiendomEndpoint

--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -17,4 +17,6 @@
   <add key="GeoID:IntrospectionUrl" value=""/>
   <add key="GeoID:IntrospectionCredentials" value=""/>
   <add key="BasicAuthRoles" value=""/>
+  <add key="MatrikkelEiendomEndpoint" value="https://localhost:44350/api/tilgangskontrollmatrikkeleiendomtest"/>
+  <add key="MatrikkelEiendomEndpointToken" value=""/>
 </appSettings>
