--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -19,4 +19,6 @@
   <add key="BasicAuthRoles" value=""/>
   <add key="MatrikkelEiendomEndpoint" value="https://localhost:44350/api/tilgangskontrollmatrikkeleiendomtest"/>
   <add key="MatrikkelEiendomEndpointToken" value=""/>
+  <add key="ClipperFileValidator" value="https://testnedlasting2.geonorge.no/fmedatastreaming/Orders/ClipperFileValidator.fmw"/>
+  <add key="ClipperFileValidatorToken" value=""/>
 </appSettings>
