--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -21,4 +21,5 @@
   <add key="MatrikkelEiendomEndpointToken" value=""/>
   <add key="ClipperFileValidator" value="https://testnedlasting2.geonorge.no/fmedatastreaming/Orders/ClipperFileValidator.fmw"/>
   <add key="ClipperFileValidatorToken" value=""/>
+  <add key="FmeToken" value=""/>
 </appSettings>
