Add file extensions to serve

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -70,6 +70,12 @@
     <httpModules />
   </system.web>
   <system.webServer>
+	  <staticContent>
+		  <remove fileExtension=".sos" />
+		  <mimeMap fileExtension=".sos" mimeType="text/vnd.sosi" />
+		  <remove fileExtension=".zip" />
+		  <mimeMap fileExtension=".zip" mimeType="application/zip" />
+	  </staticContent>
     <httpProtocol>
       <customHeaders>
         <clear />
