Add file extensions

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -75,6 +75,16 @@
 		  <mimeMap fileExtension=".sos" mimeType="text/vnd.sosi" />
 		  <remove fileExtension=".zip" />
 		  <mimeMap fileExtension=".zip" mimeType="application/zip" />
+		  <remove fileExtension=".7z" />
+		  <mimeMap fileExtension=".7z" mimeType="application/x-7z-compressed" />
+		  <remove fileExtension=".tar" />
+		  <mimeMap fileExtension=".tar" mimeType="application/x-tar" />
+		  <remove fileExtension=".gdb" />
+		  <mimeMap fileExtension=".gdb" mimeType="application/octet-stream" />
+		  <remove fileExtension=".gml" />
+		  <mimeMap fileExtension=".gml" mimeType="application/gml+xml" />
+		  <remove fileExtension=".geojson" />
+		  <mimeMap fileExtension=".geojson" mimeType="application/geo+json" />
 	  </staticContent>
     <httpProtocol>
       <customHeaders>
