--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -22,4 +22,5 @@
   <add key="ClipperFileValidator" value="https://testnedlasting2.geonorge.no/fmedatastreaming/Orders/ClipperFileValidator.fmw"/>
   <add key="ClipperFileValidatorToken" value=""/>
   <add key="FmeToken" value=""/>
+  <add key="FmeAreaCheckerToken" value=""/>
 </appSettings>
