Add token and change path for order bundling service

--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -23,4 +23,5 @@
   <add key="ClipperFileValidatorToken" value=""/>
   <add key="FmeToken" value=""/>
   <add key="FmeAreaCheckerToken" value=""/>
+  <add key="OrderBundleServiceUrlToken" value=""/>
 </appSettings>
