Add support email

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -45,6 +45,7 @@
     <add key="OrderBundleServiceUrl" value="http://testnedlasting2.geonorge.no/fmedatadownload/FilePacker/FilePacker.fmw" />
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
+	<add key="SupportEmail" value="dev@arkitektum.no" />
     <add key="SmtpHost" value="smtp.altibox.no" />
     <add key="EnvironmentName" value="dev" />
     <add key="SupportsMultiCulture" value="true" />
