--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -24,4 +24,6 @@
   <add key="FmeToken" value=""/>
   <add key="FmeAreaCheckerToken" value=""/>
   <add key="OrderBundleServiceUrlToken" value=""/>
+  <add key="FmeCheckPackageSizeUrl" value=""/>
+  <add key="FmeCheckPackageSizeToken" value=""/>
 </appSettings>
