--- a/Kartverket.Geonorge.Download/package.json
+++ b/Kartverket.Geonorge.Download/package.json
@@ -6,7 +6,6 @@
     "gulp": "^4.0.2"
   },
   "dependencies": {
-    "geonorge-shared-partials": "https://github.com/kartverket/Geonorge.SharedPartials.git",
-    "geonorge-base": "https://github.com/kartverket/felleskomponenter.git"
+    "@kartverket/geonorge-web-components": "^0.2.7"
   }
 }
